--- a/Sources/LibraryManagement/Model/Model.csproj
+++ b/Sources/LibraryManagement/Model/Model.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,13 +42,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="AccountStatus.cs" />
+    <Compile Include="Address.cs" />
+    <Compile Include="Admin.cs" />
     <Compile Include="BookFormat.cs" />
     <Compile Include="BookStatus.cs" />
     <Compile Include="BookType.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Librarian.cs" />
+    <Compile Include="LibraryCard.cs" />
+    <Compile Include="LibrarySystem.cs" />
+    <Compile Include="Member.cs" />
     <Compile Include="MemberType.cs" />
+    <Compile Include="Notification.cs" />
+    <Compile Include="PersonalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturningStatus.cs" />
+    <Compile Include="Stockeeper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
