--- a/Sources/LibraryManagement/Model/Model.csproj
+++ b/Sources/LibraryManagement/Model/Model.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Admin.cs" />
     <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="BookDummy.cs" />
     <Compile Include="BookFormat.cs" />
     <Compile Include="BookItem.cs" />
     <Compile Include="BookLending.cs" />
