--- a/Sources/LibraryManagement/ViewModel/ViewModel.csproj
+++ b/Sources/LibraryManagement/ViewModel/ViewModel.csproj
@@ -51,6 +51,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202008170751498_v1.cs" />
+    <Compile Include="Migrations\202008170751498_v1.designer.cs">
+      <DependentUpon>202008170751498_v1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170821274_v2.cs" />
+    <Compile Include="Migrations\202008170821274_v2.designer.cs">
+      <DependentUpon>202008170821274_v2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170824050_v3.cs" />
+    <Compile Include="Migrations\202008170824050_v3.designer.cs">
+      <DependentUpon>202008170824050_v3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170832479_v31.cs" />
+    <Compile Include="Migrations\202008170832479_v31.designer.cs">
+      <DependentUpon>202008170832479_v31.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170836381_v4.cs" />
+    <Compile Include="Migrations\202008170836381_v4.designer.cs">
+      <DependentUpon>202008170836381_v4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170859564_v41.cs" />
+    <Compile Include="Migrations\202008170859564_v41.designer.cs">
+      <DependentUpon>202008170859564_v41.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170938051_v5.cs" />
+    <Compile Include="Migrations\202008170938051_v5.designer.cs">
+      <DependentUpon>202008170938051_v5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170941391_v6.cs" />
+    <Compile Include="Migrations\202008170941391_v6.designer.cs">
+      <DependentUpon>202008170941391_v6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170944531_v7.cs" />
+    <Compile Include="Migrations\202008170944531_v7.designer.cs">
+      <DependentUpon>202008170944531_v7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170947165_v71.cs" />
+    <Compile Include="Migrations\202008170947165_v71.designer.cs">
+      <DependentUpon>202008170947165_v71.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008170959060_v8.cs" />
+    <Compile Include="Migrations\202008170959060_v8.designer.cs">
+      <DependentUpon>202008170959060_v8.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QltvContext.cs" />
@@ -64,6 +108,41 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202008170751498_v1.resx">
+      <DependentUpon>202008170751498_v1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170821274_v2.resx">
+      <DependentUpon>202008170821274_v2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170824050_v3.resx">
+      <DependentUpon>202008170824050_v3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170832479_v31.resx">
+      <DependentUpon>202008170832479_v31.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170836381_v4.resx">
+      <DependentUpon>202008170836381_v4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170859564_v41.resx">
+      <DependentUpon>202008170859564_v41.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170938051_v5.resx">
+      <DependentUpon>202008170938051_v5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170941391_v6.resx">
+      <DependentUpon>202008170941391_v6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170944531_v7.resx">
+      <DependentUpon>202008170944531_v7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170947165_v71.resx">
+      <DependentUpon>202008170947165_v71.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008170959060_v8.resx">
+      <DependentUpon>202008170959060_v8.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
